chore(worker): fix test case
* replace Zeebe test rule by test-containers to avoid class loading issues with the feel engine
* remove unused dependency that is now part of Camunda 7.13
* use default DMN configuration